doc/dg: made HTML rendering to work

--- a/doc/src/users-guide/Makefile
+++ b/doc/src/users-guide/Makefile
@@ -1,6 +1,7 @@
-PERL=perl
 INKSCAPE=inkscape
 DOT=dot
+LTOH=../tools/ltoh
+PREPHTML=../tools/prephtml
 
 DOCNAME=inet-users-guide
 TEXMAIN=$(DOCNAME).tex
@@ -41,10 +42,10 @@ pdf: $(ALLTEX) $(PDFPICS) figures/*.png
 %.png: %.dot
 	$(DOT) -Tpng $< >$@
 
-html : $(ALLTEX) $(SVGPICS) $(HTMLTEMPLATE) prephtml ltoh ltoh.specs
+html : $(ALLTEX) $(SVGPICS) $(HTMLTEMPLATE) $(PREPHTML) $(LTOH) ltoh.specs
 	CHAPTERS=$$(grep '\include{' $(TEXMAIN) | sed 's/\\include{//;s/}/.tex/' | sed '/^title\.tex/d') && cat $$CHAPTERS > _allinone_.tex
-	$(PERL) ltoh _allinone_.tex
-	$(PERL) prephtml --template $(HTMLTEMPLATE) --productversion $(VERSION) --outfilenamebase $(DOCNAME) _allinone_.html
+	$(LTOH) _allinone_.tex
+	$(PREPHTML) --template $(HTMLTEMPLATE) --productversion $(VERSION) --outfilenamebase $(DOCNAME) _allinone_.html
 	rm _allinone_.tex _allinone_.html
 	mkdir -p $(HTMLDIR)
 	cp $(DOCNAME).html $(HTMLDIR)/index.html
@@ -54,17 +55,17 @@ html : $(ALLTEX) $(SVGPICS) $(HTMLTEMPLATE) prephtml ltoh ltoh.specs
 	cp figures/*.png $(HTMLDIR)
 	@if grep 'Unknown LaTeX command' $(DOCNAME).html; then echo 'Error: LaTeX commands missing from ltoh.specs! (see lines above)'; exit 1; fi
 
-md : $(ALLTEX) $(SVGPICS) $(MDTEMPLATE) prephtml ltoh ltoh.specs
+md : $(ALLTEX) $(SVGPICS) $(MDTEMPLATE) $(PREPHTML) $(LTOH) ltoh.specs
 	CHAPTERS=$$(grep '\include{' $(TEXMAIN) | sed 's/\\include{//;s/}/.tex/' | sed '/^title\.tex/d') && cat $$CHAPTERS > _allinone_.tex
-	$(PERL) ltoh _allinone_.tex
-	$(PERL) prephtml --ext md --split --template $(MDTEMPLATE) --productversion $(VERSION) --outfilenamebase $(DOCNAME) _allinone_.html
+	$(LTOH) _allinone_.tex
+	$(PREPHTML) --ext md --split --template $(MDTEMPLATE) --productversion $(VERSION) --outfilenamebase index _allinone_.html
 	rm _allinone_.tex _allinone_.html
 	mkdir -p $(MDDIR)
 	cp *.md Snippets.* $(MDDIR)
 	cp *.png $(MDDIR)
 	cp figures/*.svg $(MDDIR)
 	cp figures/*.png $(MDDIR)
-	@if grep 'Unknown LaTeX command' $(DOCNAME).md; then echo 'Error: LaTeX commands missing from ltoh.specs! (see lines above)'; exit 1; fi
+	@if grep 'Unknown LaTeX command' *.md; then echo 'Error: LaTeX commands missing from ltoh.specs! (see lines above)'; exit 1; fi
 
 clean:
 	rm -f $(DOCNAME).dvi $(DOCNAME).pdf $(DOCNAME).html $(DOCNAME).md *.md *.aux *.idx *.ilg *.ind *.log *.out *.toc *.bbl *.blg
