It is an example of video streaming with TCP, UDP protocols and the DASH techinique.

--- a/examples/wireless/video/videoStreaming/simulations/omnetpp.ini
+++ b/examples/wireless/video/videoStreaming/simulations/omnetpp.ini
@@ -1,9 +1,9 @@
 #
 #  VideoStreaming
 # 
-#  It's an example of video streaming with TCP, UDP protocols and the DASH techinique.
-#  To do the video streaming with TCP we developed the TCPBasicVideoStream and with the DASH we developed the 
-#  TCPVideoStreamCliApp and both are in src/inet/applications/tcpapp. 	
+#  It's an example of video streaming with Tcp, Udp protocols and the DASH techinique.
+#  To do the video streaming with Tcp we developed the TcpBasicVideoStream and with the DASH we developed the 
+#  TcpVideoStreamCliApp and both are in src/inet/applications/Tcpapp. 	
 #  Created on 8 de dez de 2017 by Anderson Andrei da Silva & Patrick Menani Abrahão at University of São Paulo
 #
 
@@ -79,28 +79,28 @@ repeat = 10
 
 
 #-------------------------------------------------------------------------------------
-#------------------------------------------UDP----------------------------------------
+#------------------------------------------Udp----------------------------------------
 #-------------------------------------------------------------------------------------
 
-[Config WirelessUDP]
+[Config WirelessUdp]
 extends = Base-simulation
 
 # Server
 *.hostA.numUdpApps = 1
-*.hostA.udpApp[0].typename = "UDPVideoStreamSvr"
-*.hostA.udpApp[*].videoSize = 20MiB
-*.hostA.udpApp[*].sendInterval = 1s
-*.hostA.udpApp[*].packetLen = 60KiB
-*.hostA.udpApp[0].localPort = 5000
+*.hostA.UdpApp[0].typename = "UdpVideoStreamSvr"
+*.hostA.UdpApp[*].videoSize = 20MiB
+*.hostA.UdpApp[*].sendInterval = 1s
+*.hostA.UdpApp[*].packetLen = 60KiB
+*.hostA.UdpApp[0].localPort = 5000
 
 # Hosts
 *.hostB.numUdpApps = 1
-*.hostB.udpApp[0].typename = "UDPVideoStreamCli"
-*.hostB.udpApp[0].serverAddress = "hostA"
-*.hostB.udpApp[0].startTime = 0s
-*.hostB.udpApp[0].serverPort = 5000
+*.hostB.UdpApp[0].typename = "UdpVideoStreamCli"
+*.hostB.UdpApp[0].serverAddress = "hostA"
+*.hostB.UdpApp[0].startTime = 0s
+*.hostB.UdpApp[0].serverPort = 5000
 
-*.visualizer.networkRouteVisualizer.packetFilter = "UDPData*"
+*.visualizer.networkRouteVisualizer.packetFilter = "UdpData*"
 
 *.host*.**.bitrate = 10Mbps
 
@@ -109,61 +109,62 @@ extends = Base-simulation
 #-------------------------------------------------------------------------------------
 [Config WirelessDASH]
 extends = Base-simulation
-**.tcpType = "TCP"
+**.TcpType = "Tcp"
 
 # Server
 *.hostA.numTcpApps = 1
-*.hostA.tcpApp[0].typename = "TCPGenericSrvApp"
-*.hostA.tcpApp[0].localPort = 5001
+*.hostA.TcpApp[0].typename = "TcpGenericSrvApp"
+*.hostA.TcpApp[0].localPort = 5001
 
 # Host destino
 *.hostB.numTcpApps = 1
-*.hostB.tcpApp[0].typename = "TCPVideoStreamCliApp"
-*.hostB.tcpApp[0].connectPort = 5001
-*.hostB.tcpApp[0].connectAddress = "hostA"
-*.hostB.tcpApp[0].dataTransferMode = "object"
-*.hostB.tcpApp[0].numRequestsPerSession = 1000
-*.hostB.tcpApp[0].idleInterval = 0s
-*.hostB.tcpApp[0].startTime = 0s
-*.hostB.tcpApp[0].video_duration = 1000
-*.hostB.tcpApp[0].thinkTime = 0s
+*.hostB.TcpApp[0].typename = "TcpVideoStreamCliApp"
+*.hostB.TcpApp[0].connectPort = 5001
+*.hostB.TcpApp[0].connectAddress = "hostA"
+*.hostB.TcpApp[0].dataTransferMode = "object"
+*.hostB.TcpApp[0].numRequestsPerSession = 1000
+*.hostB.TcpApp[0].idleInterval = 0s
+*.hostB.TcpApp[0].startTime = 0s
+*.hostB.TcpApp[0].video_duration = 1000
+*.hostB.TcpApp[0].thinkTime = 0s
 
 *.host*.**.bitrate = 10Mbps
 
 #--------------------------------------------------------------------------------------
 # Visualizer
-*.visualizer.physicalLinkVisualizer.packetFilter = "TCPData*"
-*.visualizer.networkRouteVisualizer.packetFilter = "TCPData*"
+*.visualizer.physicalLinkVisualizer.packetFilter = "TcpData*"
+*.visualizer.networkRouteVisualizer.packetFilter = "TcpData*"
 
 #-------------------------------------------------------------------------------------
-#------------------------------------------TCP----------------------------------------
+#------------------------------------------Tcp----------------------------------------
 #-------------------------------------------------------------------------------------
-[Config WirelessTCP]
+[Config WirelessTcp]
 extends = Base-simulation
-**.tcpType = "TCP"
+**.TcpType = "Tcp"
 
 # Server
 *.hostA.numTcpApps = 1
-*.hostA.tcpApp[0].typename = "TCPGenericSrvApp"
-*.hostA.tcpApp[0].localPort = 5001
+*.hostA.TcpApp[0].typename = "TcpGenericSrvApp"
+*.hostA.TcpApp[0].localPort = 5001
 
 # Host destino
 *.hostB.numTcpApps = 1
-*.hostB.tcpApp[0].typename = "TCPBasicVideoStreamCliApp"
-*.hostB.tcpApp[0].connectAddress = "hostA"
-*.hostB.tcpApp[0].dataTransferMode = "object"
-*.hostB.tcpApp[0].video_current_quality_index = 0
-*.hostB.tcpApp[0].idleInterval = 0s
-*.hostB.tcpApp[0].thinkTime = 0s
-*.hostB.tcpApp[0].stopTime = 1000s
-*.hostB.tcpApp[0].numRequestsPerSession = 1000
-*.hostB.tcpApp[0].video_duration = 1000
+#*.hostB.TcpApp[0].typename = "TcpBasicVideoStreamCliApp"
+*.hostB.TcpApp[0].typename = "TcpVideoStreamCliApp"
+*.hostB.TcpApp[0].connectAddress = "hostA"
+*.hostB.TcpApp[0].dataTransferMode = "object"
+*.hostB.TcpApp[0].video_current_quality_index = 0
+*.hostB.TcpApp[0].idleInterval = 0s
+*.hostB.TcpApp[0].thinkTime = 0s
+*.hostB.TcpApp[0].stopTime = 1000s
+*.hostB.TcpApp[0].numRequestsPerSession = 1000
+*.hostB.TcpApp[0].video_duration = 1000
 
-*.hostB.tcpApp[0].connectPort = 5001
+*.hostB.TcpApp[0].connectPort = 5001
 
 *.host*.**.bitrate = 10Mbps
 
 #--------------------------------------------------------------------------------------
 # Visualizer
-*.visualizer.physicalLinkVisualizer.packetFilter = "TCPData*"
-*.visualizer.networkRouteVisualizer.packetFilter = "TCPData*"
+*.visualizer.physicalLinkVisualizer.packetFilter = "TcpData*"
+*.visualizer.networkRouteVisualizer.packetFilter = "TcpData*"
