hasRIP, hasOSPF and similar parameters changed to camel case

--- a/examples/pim/iptv/omnetpp.ini
+++ b/examples/pim/iptv/omnetpp.ini
@@ -5,7 +5,7 @@ network = inet.examples.pim.iptv.Network
 **.configurator.addStaticRoutes = false
 
 # OSPF
-**.R??.hasOSPF = true
+**.R??.hasOspf = true
 **.ospf.ospfConfig = xmldoc("ASConfig.xml")
 **.ospf.helloInterval = 10s
 **.ospf.retransmissionInterval = 5s
