All: Replaced various fooType parameter assignments with foo.typename assignments.

--- a/examples/wireless/layered80211/omnetpp.ini
+++ b/examples/wireless/layered80211/omnetpp.ini
@@ -87,10 +87,10 @@ description = "host1 pinging host0"
 **.wlan[*].radio.transmitter.signalModulator.typename = "Ieee80211OfdmModulator" #TODO autoconverted
 **.wlan[*].radio.transmitter.dataEncoder.typename = "Ieee80211OfdmEncoder" #TODO autoconverted
 **.wlan[*].radio.transmitter.dataModulator.typename = "Ieee80211OfdmModulator" #TODO autoconverted
-**.wlan[*].radio.transmitter.dataEncoder.fec.typename = "ConvolutionalCoder" #TODO autoconverted
+**.wlan[*].radio.transmitter.dataEncoder.fecEncoder.typename = "ConvolutionalCoder" #TODO autoconverted
 **.wlan[*].radio.transmitter.dataEncoder.scrambler.typename = "AdditiveScrambler" #TODO autoconverted
 **.wlan[*].radio.transmitter.dataEncoder.interleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
-**.wlan[*].radio.transmitter.signalEncoder.fec.typename = "ConvolutionalCoder" #TODO autoconverted
+**.wlan[*].radio.transmitter.signalEncoder.fecEncoder.typename = "ConvolutionalCoder" #TODO autoconverted
 **.wlan[*].radio.transmitter.signalEncoder.scrambler.typename = "" #TODO autoconverted
 **.wlan[*].radio.transmitter.signalEncoder.interleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
 
@@ -136,10 +136,10 @@ description = "host1 pinging host0"
 **.wlan[*].radio.receiver.signalDecoder.typename = "Ieee80211OfdmDecoder" #TODO autoconverted
 **.wlan[*].radio.receiver.signalDemodulator.typename = "Ieee80211OfdmDemodulator" #TODO autoconverted
 **.wlan[*].radio.receiver.dataDemodulator.typename = "Ieee80211OfdmDemodulator" #TODO autoconverted
-**.wlan[*].radio.receiver.dataDecoder.fec.typename = "ConvolutionalCoder" #TODO autoconverted
+**.wlan[*].radio.receiver.dataDecoder.fecDecoder.typename = "ConvolutionalCoder" #TODO autoconverted
 **.wlan[*].radio.receiver.dataDecoder.descrambler.typename = "AdditiveScrambler" #TODO autoconverted
 **.wlan[*].radio.receiver.dataDecoder.deinterleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
-**.wlan[*].radio.receiver.signalDecoder.fec.typename = "ConvolutionalCoder" #TODO autoconverted
+**.wlan[*].radio.receiver.signalDecoder.fecDecoder.typename = "ConvolutionalCoder" #TODO autoconverted
 **.wlan[*].radio.receiver.signalDecoder.descrambler.typename = "" #TODO autoconverted
 **.wlan[*].radio.receiver.signalDecoder.deinterleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
 
