Examples: Fixed incorrect replacements for cases which don't follow the naming convention.

--- a/examples/inet/udpclientserver/omnetpp.ini
+++ b/examples/inet/udpclientserver/omnetpp.ini
@@ -45,7 +45,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.hasIpv4 = false
 **.hasIpv6 = false
 **.hasGn =   true
-**.networkLayer.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
 **.udp.crcMode = "disabled"
 
 
