--- a/examples/manetrouting/gpsr/omnetpp.ini
+++ b/examples/manetrouting/gpsr/omnetpp.ini
@@ -76,7 +76,7 @@ description = network layer for multiple network protocols
 **.hasIpv4 = true
 **.hasIpv6 = true
 **.hasGn = true
-**.networkLayer.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
 
 [Config MultiIPv4]
 extends = Random, _Multi, _IPv4
