--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -71,11 +71,11 @@ extends = MacNonQos
 **.wlan[*].classifier.typename = "ExampleQosClassifier" #TODO autoconverted
 **.mac.hcf.maxQueueSize = -1
 **.mac.qosStation = true
-**.mac.hcf.originatorMacDataService.aMsduAggregationPolicy.typename = "BasicMsduAggregationPolicy" #TODO autoconverted
+**.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = "BasicMsduAggregationPolicy" #TODO autoconverted
 
 [Config MacQosWithoutAggregation]
 extends = MacQos
-**.mac.hcf.originatorMacDataService.aMsduAggregationPolicy.typename = "" #TODO autoconverted
+**.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = "" #TODO autoconverted
 
 [Config MacQosWithRtsCts]
 extends = MacQos
