follow 802.11: change default mac to Ieee80211Mac

--- a/examples/inet/configurator/complex.ini
+++ b/examples/inet/configurator/complex.ini
@@ -27,6 +27,7 @@ tkenv-plugin-path = ../../../etc/plugins
 # radio
 **.transmitter.power = 1mW
 **.bitrate = 54Mbps # KLUDGE: TODO: static routing based on error rate doesn't work without setting the bitrate
+**.wlan[0].mac.*.maxQueueSize = 14
 
 # ping app
 **.source.numApps = 2
