--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -195,10 +195,10 @@ tkenv-plugin-path = ../../etc/plugins
 **.wlan*.bitrate = 2Mbps
 
 **.mac.address = "auto"
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 4000B
+**.mac.*.maxQueueSize = 14
+**.mac.dcf.rtsPolicy.rtsThreshold = 4000B
 **.wlan*.mac.retryLimit = 7
-**.wlan*.mac.cwMinData = 7
+**.wlan*.mac.dcf.channelAccess.cwMin = 7
 **.wlan*.mac.cwMinBroadcast = 31
 
 **.radio.transmitter.power = 2.0mW
