--- a/examples/wireless/crosstalk/omnetpp.ini
+++ b/examples/wireless/crosstalk/omnetpp.ini
@@ -30,6 +30,7 @@ seed-set = 1
 
 # nic
 *.*Node[*].wlan[*].radioType = "Ieee80211DimensionalRadio"
+*.*Node[*].wlan[*].mac.*.maxQueueSize = 14
 
 # medium
 *.radioMedium.backgroundNoise.dimensions = "time frequency"
