--- a/examples/wireless/dynamic/omnetpp.ini
+++ b/examples/wireless/dynamic/omnetpp.ini
@@ -24,3 +24,5 @@ tkenv-plugin-path = ../../../etc/plugins
 **.sourceNode[*].app[0].typename = "PingApp"
 **.sourceNode[*].app[*].destAddr = "destinationNode"
 **.app[*].printPing = true
+
+**.wlan[*].mac.*.maxQueueSize = 14
