--- a/examples/wireless/errorrate/omnetpp.ini
+++ b/examples/wireless/errorrate/omnetpp.ini
@@ -29,3 +29,6 @@ tkenv-plugin-path = ../../../etc/plugins
 **.receiver.snirThreshold = 0dB
 **.receiver.energyDetection = -100dBm
 **.receiver.sensitivity = -100dBm
+
+**.wlan[*].mac.*.maxQueueSize = 14
+
