--- a/examples/wireless/filtering/omnetpp.ini
+++ b/examples/wireless/filtering/omnetpp.ini
@@ -22,6 +22,8 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 *.host[*].wlan[0].radio.transmitter.power = 2mW
+**.wlan[*].mac.*.maxQueueSize = 14
+
 
 [Config CommunicationRangeFilter]
 *.radioMedium.rangeFilter = "communicationRange"
