--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -39,6 +39,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # wireless configuration
 **.wlan*.bitrate = 2Mbps
+**.wlan[*].mac.*.maxQueueSize = 14
 
 **.wlan[*].agent.activeScan = true
 **.wlan[*].agent.default_ssid = ""
@@ -50,10 +51,9 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].agent.associationTimeout = 5s
 
 **.mac.address = "auto"
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 4000B
+**.mac.dcf.rtsPolicy.rtsThreshold = 4000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.radio.transmitter.power = 2.0mW
