--- a/examples/wireless/lan80211ac/omnetpp.ini
+++ b/examples/wireless/lan80211ac/omnetpp.ini
@@ -33,10 +33,11 @@ tkenv-plugin-path = ../../../etc/plugins
 
 
 **.mac.address = "auto"
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
+**.mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
+**.wlan[*].mac.uppermac.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMulticast = 31
 
 **.bandName = "5 GHz (20 MHz)" #,"5 GHz (20 MHz)","5 GHz (40 MHz)","5 GHz (80 MHz)","5 GHz (160 MHz)"
@@ -46,6 +47,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].radio.antenna.numAntennas = 8 #maximum number of streams for 802.11ac is 8
 
 **.bitrate = 693.3Mbps
+**.wlan[*].mac.*.maxQueueSize = 14
 
 **.wlan[*].radio.transmitter.power = 100mW
 **.wlan[*].radio.transmitter.headerBitLength = 100b
