--- a/examples/wireless/layered80211/omnetpp.ini
+++ b/examples/wireless/layered80211/omnetpp.ini
@@ -42,10 +42,10 @@ tkenv-plugin-path = ../../../etc/plugins
 
 **.wlan[*].mgmt.frameCapacity = 10
 **.wlan[*].mac.address = "auto"
-**.wlan[*].mac.maxQueueSize = 14
-**.wlan[*].mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.wlan[*].radio.transmitter.power = 0.1mW
@@ -61,9 +61,12 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # MAC
 **.wlan[*].mac.controlBitrate = 6Mbps
-**.wlan[*].mac.dataBitrate = 36Mbps
-**.wlan[*].mac.basicBitrate = 6Mbps
-**.wlan[*].mac.multicastBitrate = 24Mbps
+**.wlan[*].mac.*.rateSelection.dataFrameBitrate = 36Mbps
+**.wlan[*].mac.*.rateSelection.multicastFrameBitrate = 24Mbps
+**.wlan[*].mac.*.rateSelection.responseAckFrameBitrate = 6Mbps
+**.wlan[*].mac.*.rateSelection.mgmtFrameBitrate = 6Mbps
+**.wlan[*].mac.*.rateSelection.controlFrameBitrate = 6Mbps
+
 
 [Config LayeredCompliant80211Ping]
 description = "host1 pinging host0"
@@ -190,4 +193,4 @@ description = "host1 pinging host0"
 ## Iterations
 #**.channelSpacing = ${spacing=5,10,20}MHz
 #**.headerBitrate = ${headerBitrate = 1.5, 3, 6}Mbps
-##**.dataBitrate = ${dataBitrate = 12, 24, 36, 54}Mbps
+##**.*.rateSelection.dataFrameBitrate = ${dataBitrate = 12, 24, 36, 54}Mbps
