--- a/examples/wireless/multiradio/omnetpp.ini
+++ b/examples/wireless/multiradio/omnetpp.ini
@@ -53,6 +53,8 @@ tkenv-plugin-path = ../../../etc/plugins
 # global data rates
 **.wlan*.bitrate = 11Mbps
 
+**.wlan[*].mac.*.maxQueueSize = 14
+
 # application level: host1 pings host2
 **.host*.numApps = 1
 **.app[0].typename = "PingApp"
