--- a/examples/wireless/obstacle/omnetpp.ini
+++ b/examples/wireless/obstacle/omnetpp.ini
@@ -36,6 +36,9 @@ num-rngs = 3
 *.host[*].app[*].destAddr = "host[0]"
 **.app[*].printPing = true
 
+# wlan
+**.wlan[*].mac.*.maxQueueSize = 14
+
 [Config Outdoor]
 description = "Wireless nodes send pings while moving around the streets"
 
@@ -154,3 +157,4 @@ description = "Wireless nodes send pings while orbiting around a sphere"
 *.host[0].mobility.r = 400m
 *.host[*].mobility.r = 500m
 *.host[*].mobility.updateInterval = 100ms
+
