--- a/examples/wireless/ratecontrol/omnetpp.ini
+++ b/examples/wireless/ratecontrol/omnetpp.ini
@@ -33,11 +33,10 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 **.wlan*.bitrate = 1Mbps
-
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
+**.wlan*.mac.*.maxQueueSize = 14
+**.wlan*.mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.mac.retryLimit = 7
-**.mac.cwMinData = 31
+**.mac.dcf.channelAccess.cwMin = 31
 **.mac.cwMinBroadcast = 31
 
 **.radio.transmitter.power = 50mW
@@ -60,5 +59,5 @@ tkenv-plugin-path = ../../../etc/plugins
 **.sinkClient.mobility.speed = 5mps
 
 [Config Mac]
-**.wlan.macType = "Ieee80211CompatibleMac"
+**.wlan.macType = "Ieee80211Mac"
 
