--- a/examples/wireless/wiredandwirelesshostswithap/omnetpp.ini
+++ b/examples/wireless/wiredandwirelesshostswithap/omnetpp.ini
@@ -22,4 +22,6 @@ tkenv-plugin-path = ../../../etc/plugins
 **.*Host*.app[1..].sendInterval = 1s
 **.*Host*.app[1..].stopTime = 300s
 
+**.wlan*.mac.*.maxQueueSize = 14
+
 **.initialZ = 0m
