--- a/examples/adhoc/hostautoconf/omnetpp.ini
+++ b/examples/adhoc/hostautoconf/omnetpp.ini
@@ -40,10 +40,11 @@ cmdenv-express-mode = true
 
 **.wlan[*].mgmt.frameCapacity = 10
 **.wlan[*].mac.address = "auto"
-**.wlan[*].mac.maxQueueSize = 14
-**.wlan[*].mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
+**.wlan[*].mac.rMac.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.wlan[*].radio.transmitter.power = 2mW
