--- a/examples/adhoc/ieee80211/omnetpp.ini
+++ b/examples/adhoc/ieee80211/omnetpp.ini
@@ -38,10 +38,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].mgmt.frameCapacity = 10
 
 **.wlan[*].mac.address = "auto"
-**.wlan[*].mac.maxQueueSize = 14
-**.wlan[*].mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.wlan[*].radio.transmitter.power = 2mW
