--- a/examples/aodv/omnetpp.ini
+++ b/examples/aodv/omnetpp.ini
@@ -39,10 +39,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].bitrate = 2Mbps
 **.wlan[*].mgmt.frameCapacity = 10
 **.wlan[*].mac.address = "auto"
-**.wlan[*].mac.maxQueueSize = 14
-**.wlan[*].mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinMulticast = 31
 
 # lifecycle
