--- a/examples/dhcp/omnetpp.ini
+++ b/examples/dhcp/omnetpp.ini
@@ -28,6 +28,8 @@ network = WiredNetWithDHCP
 description = Wireless hosts configured via DHCP
 network = WirelessNetWithDHCP
 
+**.wlan[*].mac.*.maxQueueSize = 14
+
 **.mobility.constraintAreaMinX = 0m
 **.mobility.constraintAreaMinY = 0m
 **.mobility.constraintAreaMinZ = 0m
@@ -59,7 +61,7 @@ network = WirelessNetWith2DHCP
 **.numHosts = 1
 
 **.wlan[*].radio.transmitter.power = 2mW
-
+**.wlan[*].mac.*.maxQueueSize = 14
 **.configurator.config = xml(" \
     <config> \
         <interface hosts='dhcpServer1' names='eth0' address='192.168.1.1' netmask='255.255.255.0'/> \
