--- a/examples/manetrouting/dymo/omnetpp.ini
+++ b/examples/manetrouting/dymo/omnetpp.ini
@@ -32,10 +32,11 @@ tkenv-plugin-path = ../../../etc/plugins
 
 **.wlan[*].mgmt.frameCapacity = 10
 **.wlan[*].mac.address = "auto"
-**.wlan[*].mac.maxQueueSize = 14
-**.wlan[*].mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
+**.wlan[*].mac.uppermac.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinMulticast = 31
 
 **.wlan[*].radio.transmitter.power = 2mW
