--- a/examples/objectcache/omnetpp.ini
+++ b/examples/objectcache/omnetpp.ini
@@ -60,10 +60,10 @@ num-rngs = 3
 **.wlan[*].bitrate = 2Mbps
 **.wlan[*].mgmt.frameCapacity = 10
 **.wlan[*].mac.address = "auto"
-**.wlan[*].mac.maxQueueSize = 14
-**.wlan[*].mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.wlan[*].radio.transmitter.power = 5mW
