--- a/examples/wireless/hiddennode/omnetpp.ini
+++ b/examples/wireless/hiddennode/omnetpp.ini
@@ -13,7 +13,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.A.wlan.radio.receiver.sensitivity = -70dBm
 **.C.wlan.radio.receiver.energyDetection = -80dBm
 **.C.wlan.radio.receiver.sensitivity = -70dBm
-**.B.wlan.radio.transmitter.power = 200mW 
+**.B.wlan.radio.transmitter.power = 200mW
 
 
 **.A.mobility.initialX = 159m
@@ -40,13 +40,11 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 **.wlan*.bitrate = 1Mbps
-**.wlan*.mac.basicBitrate = 1Mbps
-
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
-**.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 31
-**.wlan[*].mac.cwMinBroadcast = 31
+**.wlan*.mac.*.rateSelection.mgmtFrameBitrate = 1Mbps
+**.wlan*.mac.*.rateSelection.multicastFrameBitrate = 1Mbps
+**.wlan*.mac.*.maxQueueSize = 14
+**.wlan*.mac.dcf.rtsPolicy.rtsThreshold = 3000B
+**.wlan*.mac.retryLimit = 7
 #**.A.wlan.mac.rng-0 = 1
 #**.C.wlan.mac.rng-0 = 2
 
