--- a/examples/wireless/hosttohost/omnetpp.ini
+++ b/examples/wireless/hosttohost/omnetpp.ini
@@ -34,13 +34,13 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 **.wlan*.bitrate = 11Mbps
+**.wlan*.mac.*.maxQueueSize = 14
 
 **.mac.address = "auto"
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
-**.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 31
-**.wlan[*].mac.cwMinBroadcast = 31
+**.wlan*.mac.dcf.rtsPolicy.rtsThreshold = 3000B
+**.wlan*.mac.retryLimit = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 31
+**.wlan*.mac.cwMinBroadcast = 31
 
 # cli
 **.cli.reqLength = 1000B
