--- a/examples/wireless/lan80211/omnetpp-ftp.ini
+++ b/examples/wireless/lan80211/omnetpp-ftp.ini
@@ -49,13 +49,13 @@ tkenv-plugin-path = ../../../etc/plugins
 #**.app[0].printPing = true
 
 # nic settings
-**.wlan*.bitrate = 2Mbps
+**.wlan[*].bitrate = 2Mbps
+**.wlan[*].mac.*.maxQueueSize = 14
 
 **.mac.address = "auto"
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.wlan[*].radio.transmitter.power = 2mW
