--- a/examples/wireless/lan80211/omnetpp.ini
+++ b/examples/wireless/lan80211/omnetpp.ini
@@ -33,12 +33,13 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 **.wlan*.bitrate = 2Mbps
+**.wlan[*].mac.*.maxQueueSize = 14
 
 **.mac.address = "auto"
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
+**.wlan[0].mac.dcf.rateSelection.dataFrameBitrate = 2Mbps
+**.wlan[*].mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinBroadcast = 31
 
 **.wlan[*].radio.transmitter.power = 2mW
