--- a/examples/wireless/layeredapsk/omnetpp.ini
+++ b/examples/wireless/layeredapsk/omnetpp.ini
@@ -94,6 +94,9 @@ cmdenv-express-mode = true
 
 # MAC
 **.wlan[*].mac.controlBitrate = 1Mbps
-**.wlan[*].mac.dataBitrate = 54Mbps
-**.wlan[*].mac.basicBitrate = 54Mbps
-**.wlan[*].mac.multicastBitrate = 24Mbps
+**.wlan[*].mac.*.rateSelection.dataFrameBitrate = 54Mbps
+**.wlan[*].mac.*.rateSelection.multicastFrameBitrate = 24Mbps
+**.wlan[*].mac.*.rateSelection.responseAckFrameBitrate = 1Mbps
+**.wlan[*].mac.*.rateSelection.mgmtFrameBitrate = 54Mbps
+**.wlan[*].mac.*.rateSelection.controlFrameBitrate = 1Mbps
+**.wlan[*].mac.*.maxQueueSize = 14
