--- a/examples/wireless/nic/omnetpp.ini
+++ b/examples/wireless/nic/omnetpp.ini
@@ -61,6 +61,7 @@ network = TestNic
 [Config AbstractIeee80211Mac]
 *.host[*].wlan[*].typename = "Ieee80211Interface"
 *.host[*].wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
+*.host[*].wlan[*].mac.*.maxQueueSize = 14
 
 [Config AbstractUnitDiskRadio]
 *.radioMediumType = "UnitDiskRadioMedium"
@@ -111,6 +112,7 @@ network = TestNic
 *.host[*].wlan[*].radio.receiver.sensitivity = -85dBm
 *.host[*].wlan[*].radio.receiver.energyDetection = -85dBm
 *.host[*].wlan[*].radio.receiver.snirThreshold = 4dB
+*.host[*].wlan[*].mac.*.maxQueueSize = 14
 
 [Config AbstractIeee80211DimensionalRadio]
 *.radioMediumType = "Ieee80211DimensionalRadioMedium"
@@ -199,11 +201,12 @@ description = "X-MAC with dimensional radio"
 extends = AbstractIeee80211Mac, AbstractUnitDiskRadio
 description = "IEEE 80211 mac with unit disk radio"
 # nic settings
-**.wlan[*].bitrate = 54Mbps
-**.mac.dataBitrate = 54Mbps
-**.mac.basicBitrate = 2Mbps
-**.mac.multicastBitrate = 54Mbps
-**.mac.controlBitrate = 54Mbps
+**.wlan*.bitrate = 54Mbps
+**.wlan*.mac.*.rateSelection.multicastFrameBitrate = 54Mbps
+**.wlan*.mac.*.rateSelection.responseAckFrameBitrate = 54Mbps
+**.wlan*.mac.*.rateSelection.mgmtFrameBitrate = 2Mbps
+**.wlan*.mac.*.rateSelection.controlFrameBitrate = 54Mbps
+
 #for validation
 
 [Config Ieee80211MacWithIeee80211ScalarRadio]
@@ -211,12 +214,16 @@ extends = AbstractIeee80211Mac, AbstractApskScalarRadio
 description = "IEEE 80211 mac with scalar radio"
 *.host[*].wlan[*].radioType = "Ieee80211ScalarRadio"
 # nic settings
-**.mac.dataBitrate = 54Mbps
-**.mac.basicBitrate = 2Mbps
-**.mac.multicastBitrate = 2Mbps
-**.mac.controlBitrate = 2Mbps
+**.wlan*.mac.*.rateSelection.dataFrameBitrate = 54Mbps
+**.wlan*.mac.*.rateSelection.multicastFrameBitrate = 2Mbps
+**.wlan*.mac.*.rateSelection.responseAckFrameBitrate = 2Mbps
+**.wlan*.mac.*.rateSelection.mgmtFrameBitrate = 2Mbps
+**.wlan*.mac.*.rateSelection.controlFrameBitrate = 2Mbps
+**.wlan*.mac.*.maxQueueSize = 14
+
 #for validation
 
 [Config Ieee80211MacWithIeee80211DimensionalRadio]
 extends = AbstractIeee80211Mac, AbstractIeee80211DimensionalRadio
 description = "IEEE 802.11 mac with IEEE 802.11 dimensional radio"
+
