--- a/examples/wireless/power/omnetpp.ini
+++ b/examples/wireless/power/omnetpp.ini
@@ -35,6 +35,9 @@ sim-time-limit = 100s
 **.mobility.initialZ = 0m
 *.host*.mobilityType = "StationaryMobility"
 
+#wifi
+**.wlan*.mac.*.maxQueueSize = 14
+
 # ping app
 *.host[0].numApps = 1
 *.host[0].app[0].typename = "PingApp"
