--- a/examples/wireless/synchronized/omnetpp.ini
+++ b/examples/wireless/synchronized/omnetpp.ini
@@ -14,9 +14,12 @@ tkenv-plugin-path = ../../../etc/plugins
 
 **.node[*].app[*].sendInterval = 20ms
 
+#wlan
+**.wlan*.mac.*.maxQueueSize = 14
+
 [Config Synchronized]
 **.node[*].app[0].startTime = 20ms
 
 [Config NonSynchronized]
 **.node[*].app[0].startTime = uniform(20ms, 40ms)
-#**.node[*].wlan[*].macType = "Ieee80211Mac"
+
