--- a/examples/wireless/testnewmac/omnetpp.ini
+++ b/examples/wireless/testnewmac/omnetpp.ini
@@ -33,12 +33,10 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 **.wlan*.bitrate = 11Mbps
-
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 1200B
-**.wlan[*].mac.retryLimit = 7
-**.wlan[*].mac.cwMinData = 31
-**.wlan[*].mac.cwMinBroadcast = 31
+**.cliHost[*].wlan*.mac.*.maxQueueSize = 14
+**.cliHost[*].wlan*.mac.dcf.rtsPolicy.rtsThreshold = 1200B
+**.wlan*.mac.retryLimit = 7
+**.wlan*.mac.cwMinBroadcast = 31
 
 # cli
 **.cli.reqLength = intWithUnit(uniform(100B, 1500B))
@@ -50,5 +48,4 @@ tkenv-plugin-path = ../../../etc/plugins
 Throughput.numCli = 1
 
 [Config Mac]
-**.wlan.macType = "Ieee80211Mac"
-
+**.srvHost.wlan.mac.*.rateSelection.dataFrameBitrate = -1bps    #FIXME HACK
