--- a/examples/wireless/throughput/omnetpp.ini
+++ b/examples/wireless/throughput/omnetpp.ini
@@ -21,11 +21,10 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # nic settings
 **.wlan*.bitrate = 1Mbps
-
-**.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
+**.wlan*.mac.*.maxQueueSize = 14
+**.wlan*.mac.dcf.rtsPolicy.rtsThreshold = 3000B
 **.mac.retryLimit = 7
-**.mac.cwMinData = 31
+**.mac.dcf.channelAccess.cwMin = 31
 **.mac.cwMinBroadcast = 31
 
 **.radio.transmitter.power = 20mW
@@ -48,5 +47,5 @@ Throughput.numCli = 3
 
 [Config Mac]
 extends = Throughput2
-**.wlan.macType = "Ieee80211CompatibleMac"
+**.wlan.macType = "Ieee80211Mac"
 
