It is an example of video streaming with TCP, UDP protocols and the DASH techinique.

--- a/examples/wireless/video/videoStreaming/simulations/omnetpp.ini
+++ b/examples/wireless/video/videoStreaming/simulations/omnetpp.ini
@@ -1,11 +1,5 @@
-#
-#  VideoStreaming
-# 
-#  It's an example of video streaming with Tcp, Udp protocols and the DASH techinique.
-#  To do the video streaming with Tcp we developed the TcpBasicVideoStream and with the DASH we developed the 
-#  TcpVideoStreamCliApp and both are in src/inet/applications/Tcpapp. 	
-#  Created on 8 de dez de 2017 by Anderson Andrei da Silva & Patrick Menani Abrahão at University of São Paulo
-#
+# It is an example that show how to use the TcpBasicVideoStreamCliApp and TcpVideoStreamCliApp.
+# Created by Anderson Andrei da Silva & Patrick Menani Abrahao at University of Sao Paulo.
 
 [General]
 tkenv-plugin-path = ../../../etc/plugins
@@ -19,40 +13,31 @@ sim-time-limit = 90s
 repeat = 10
 *.numHosts = ${50,100,150}
 
-*.host*.**.bitrate = 1Mbps
-*.host*.wlan[0].radio.transmitter.communicationRange = 200m
+# Channel Physical Parameters
+**.wlan[*].typename = "AckingWirelessInterface"
+**.wlan[*].bitrate = 1Mbps
+**.wlan[*].mac.headerLength = 20B
+**.wlan[*].radioType = "UnitDiskRadio"
+**.wlan[*].radio.transmitter.headerLength = 96b
+**.wlan[*].radio.transmitter.communicationRange = 200m
+**.wlan[*].radio.transmitter.interferenceRange = 0m
+**.wlan[*].radio.transmitter.detectionRange = 0m
+**.wlan[*].radio.receiver.ignoreInterference = true
+**.wlan[*].radio.displayInterferenceRange = true
 
-# Visualizer
-*.visualizer.physicalLinkVisualizer.displayLinks = true
-*.visualizer.dataLinkVisualizer.displayLinks = true
-*.visualizer.networkRouteVisualizer.displayRoutes = true
-*.visualizer.*LinkVisualizer.lineShift = 0
-*.visualizer.networkRouteVisualizer.lineShift = 0
-*.visualizer.mobilityVisualizer.displayVelocities = true
-*.visualizer.mobilityVisualizer.displayMovementTrails = true
-*.visualizer.mediumVisualizer.displaySignals = false
+# AODV
+*.hostType = "AodvRouter"
+*.host*.forwarding = true
+*.host*.wlan[*].mac.useAck = true
+*.hostB.wlan[0].radio.displayCommunicationRange = true
+*.hostA.wlan[0].radio.displayCommunicationRange = true
 
-# Wlan
-*.host*.wlan[0].radio.receiver.ignoreInterference = true
-*.hostA.wlan[0].radio.displayInterferenceRange = true
-*.host*.wlan[0].typename = "WirelessNic"
-*.host*.wlan[0].radioType = "IdealRadio"
-*.host*.wlan[0].macType = "CsmaCaMac"
-*.host*.wlan[0].mac.useAck = true
-*.host*.wlan[0].radio.displayInterferenceRange = false
-*.hostR*.wlan[0].radio.displayCommunicationRange = false
+*.host*.routingTable.netmaskRoutes = ""
+*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+*.configurator.optimizeRoutes = false
+*.configurator.addStaticRoutes = false
 
-# Energy
-*.host*.wlan[0].radio.energyConsumerType = "StateBasedEpEnergyConsumer"
-*.host*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
-*.host*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
-*.host*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
-*.host*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 2mW
-*.host*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 5mW
-*.host*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
-*.host*.wlan[0].radio.energyConsumer.transmitterIdlePowerConsumption = 2mW
-*.host*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
-*.host*.energyStorageType = "IdealEpEnergyStorage"
+*.visualizer.dataLinkVisualizer.packetFilter = "AODV*"
 
 # Mobility
 *.host*.mobilityType = "MassMobility"
@@ -67,104 +52,89 @@ repeat = 10
 **.mobility.constraintAreaMaxX = 1000m
 **.mobility.constraintAreaMaxY = 700m
 
-# AODV
-#*.host*.forwarding = true
-*.host*.routingTable.netmaskRoutes = ""
-*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
-*.configurator.optimizeRoutes = false
-*.configurator.addStaticRoutes = false
-*.hostType = "AODVRouter"
-*.hostB.wlan[0].radio.displayCommunicationRange = true
-*.visualizer.dataLinkVisualizer.packetFilter = "AODV*"
-
-
 #-------------------------------------------------------------------------------------
-#------------------------------------------Udp----------------------------------------
+#------------------------------------------UDP----------------------------------------
 #-------------------------------------------------------------------------------------
-
-[Config WirelessUdp]
+[Config WirelessUDP]
 extends = Base-simulation
 
-# Server
-*.hostA.numUdpApps = 1
-*.hostA.UdpApp[0].typename = "UdpVideoStreamSvr"
-*.hostA.UdpApp[*].videoSize = 20MiB
-*.hostA.UdpApp[*].sendInterval = 1s
-*.hostA.UdpApp[*].packetLen = 60KiB
-*.hostA.UdpApp[0].localPort = 5000
+#Server
+*.hostA.numApps = 1
+*.hostA.app[0].typename = "UdpVideoStreamServer"
+*.hostA.app[0].localPort = 5001
+*.hostA.app[0].sendInterval = 1s
+*.hostA.app[0].packetLen = 60KiB
+*.hostA.app[0].videoSize = 20MiB
 
-# Hosts
-*.hostB.numUdpApps = 1
-*.hostB.UdpApp[0].typename = "UdpVideoStreamCli"
-*.hostB.UdpApp[0].serverAddress = "hostA"
-*.hostB.UdpApp[0].startTime = 0s
-*.hostB.UdpApp[0].serverPort = 5000
+#Host
+*.hostB.numApps = 1
+*.hostB.app[0].typename = "UdpVideoStreamClient"
+*.hostB.app[0].serverPort = 5001
+*.hostB.app[0].serverAddress = "hostA"
+*.hostB.app[0].startTime = 0s
 
-*.visualizer.networkRouteVisualizer.packetFilter = "UdpData*"
-
+*.visualizer.networkRouteVisualizer.packetFilter = "UDPData*"
 *.host*.**.bitrate = 10Mbps
 
 #-------------------------------------------------------------------------------------
 #------------------------------------------DASH---------------------------------------
 #-------------------------------------------------------------------------------------
+
 [Config WirelessDASH]
 extends = Base-simulation
-**.TcpType = "Tcp"
 
 # Server
-*.hostA.numTcpApps = 1
-*.hostA.TcpApp[0].typename = "TcpGenericSrvApp"
-*.hostA.TcpApp[0].localPort = 5001
+*.hostA.numApps = 1
+*.hostA.app[0].typename = "TcpVideoStreamServerApp"
+*.hostA.app[0].localPort = 5001
 
-# Host destino
-*.hostB.numTcpApps = 1
-*.hostB.TcpApp[0].typename = "TcpVideoStreamCliApp"
-*.hostB.TcpApp[0].connectPort = 5001
-*.hostB.TcpApp[0].connectAddress = "hostA"
-*.hostB.TcpApp[0].dataTransferMode = "object"
-*.hostB.TcpApp[0].numRequestsPerSession = 1000
-*.hostB.TcpApp[0].idleInterval = 0s
-*.hostB.TcpApp[0].startTime = 0s
-*.hostB.TcpApp[0].video_duration = 1000
-*.hostB.TcpApp[0].thinkTime = 0s
+# Host 
+*.hostB.numApps = 1
+*.hostB.app[0].typename = "TcpVideoStreamCliApp"
+*.hostB.app[0].connectPort = 5001
+*.hostB.app[0].connectAddress = "hostA"
+*.hostB.app[0].dataTransferMode = "object"
+*.hostB.app[0].numRequestsPerSession = 1000
+*.hostB.app[0].idleInterval = 0s
+*.hostB.app[0].startTime = 0s
+*.hostB.app[0].video_duration = 1000
+*.hostB.app[0].thinkTime = 0s
 
 *.host*.**.bitrate = 10Mbps
 
 #--------------------------------------------------------------------------------------
 # Visualizer
-*.visualizer.physicalLinkVisualizer.packetFilter = "TcpData*"
-*.visualizer.networkRouteVisualizer.packetFilter = "TcpData*"
+*.visualizer.physicalLinkVisualizer.packetFilter = "TCPData*"
+*.visualizer.networkRouteVisualizer.packetFilter = "TCPData*"
+##-----------------------------------------------------------------------------
 
 #-------------------------------------------------------------------------------------
-#------------------------------------------Tcp----------------------------------------
+#------------------------------------------TCP----------------------------------------
 #-------------------------------------------------------------------------------------
-[Config WirelessTcp]
+[Config WirelessTCP]
 extends = Base-simulation
-**.TcpType = "Tcp"
 
 # Server
-*.hostA.numTcpApps = 1
-*.hostA.TcpApp[0].typename = "TcpGenericSrvApp"
-*.hostA.TcpApp[0].localPort = 5001
+*.hostA.numApps = 1
+*.hostA.app[0].typename = "TcpVideoStreamServerApp"
+*.hostA.app[0].localPort = 5001
 
-# Host destino
-*.hostB.numTcpApps = 1
-#*.hostB.TcpApp[0].typename = "TcpBasicVideoStreamCliApp"
-*.hostB.TcpApp[0].typename = "TcpVideoStreamCliApp"
-*.hostB.TcpApp[0].connectAddress = "hostA"
-*.hostB.TcpApp[0].dataTransferMode = "object"
-*.hostB.TcpApp[0].video_current_quality_index = 0
-*.hostB.TcpApp[0].idleInterval = 0s
-*.hostB.TcpApp[0].thinkTime = 0s
-*.hostB.TcpApp[0].stopTime = 1000s
-*.hostB.TcpApp[0].numRequestsPerSession = 1000
-*.hostB.TcpApp[0].video_duration = 1000
-
-*.hostB.TcpApp[0].connectPort = 5001
+# Host
+*.hostB.numApps = 1
+*.hostB.app[0].typename = "TcpBasicVideoStreamCliApp"
+*.hostB.app[0].connectAddress = "hostA"
+*.hostB.app[0].dataTransferMode = "object"
+*.hostB.app[0].video_current_quality_index = 0
+*.hostB.app[0].idleInterval = 0s
+*.hostB.app[0].thinkTime = 0s
+*.hostB.app[0].stopTime = 1000s
+*.hostB.app[0].numRequestsPerSession = 1000
+*.hostB.app[0].video_duration = 1000
+*.hostB.app[0].connectPort = 5001
 
 *.host*.**.bitrate = 10Mbps
 
 #--------------------------------------------------------------------------------------
 # Visualizer
-*.visualizer.physicalLinkVisualizer.packetFilter = "TcpData*"
-*.visualizer.networkRouteVisualizer.packetFilter = "TcpData*"
+*.visualizer.physicalLinkVisualizer.packetFilter = "TCPData*"
+*.visualizer.networkRouteVisualizer.packetFilter = "TCPData*"
