--- a/examples/ethernet/arptest/omnetpp.ini
+++ b/examples/ethernet/arptest/omnetpp.ini
@@ -34,9 +34,9 @@ tkenv-plugin-path = ../../../etc/plugins
 **.eth[*].mac.duplexMode = true
 
 # Queues
-**.ppp[*].queueType = "DropTailQueue"
+**.ppp[*].queue.typename = "DropTailQueue"
 **.ppp[*].queue.frameCapacity = 10
-**.eth[*].queueType = "DropTailQueue"
+**.eth[*].queue.typename = "DropTailQueue"
 **.eth[*].queue.dataQueue.frameCapacity = 10
 
 # Ethernet switch
