--- a/examples/inet/bulktransfer/omnetpp.ini
+++ b/examples/inet/bulktransfer/omnetpp.ini
@@ -91,7 +91,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.app[0].dataTransferMode = "bytecount"
 
 # NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 
