--- a/examples/inet/nclients/omnetpp.ini
+++ b/examples/inet/nclients/omnetpp.ini
@@ -69,7 +69,7 @@ sim-time-limit = 1000000s
 **.srv.app[0].replyDelay = 0s
 
 # NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10    # in routers
 
 # turn on throughput stat
