--- a/examples/inet/routerperf/omnetpp.ini
+++ b/examples/inet/routerperf/omnetpp.ini
@@ -29,7 +29,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.router.ppp[*].bitCapacity = 0
 
 # NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 
