--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -1,33 +1,33 @@
 [Config with_EtherMACFullDuplex_externalQueue]
 description = ""
-**.eth[*].queueType = "DropTailQueue"
+**.eth[*].queue.typename = "DropTailQueue"
 
 [Config with_EtherMACFullDuplex_internalQueue]
 description = ""
-**.eth[*].queueType = "" 
+**.eth[*].queue.typename = ""
 
 [Config with_EtherMAC_externalQueue_fullduplex]
 description = ""
 **.eth[*].mac.typename = "EtherMac" #TODO autoconverted
-**.eth[*].queueType = "DropTailQueue"
+**.eth[*].queue.typename = "DropTailQueue"
 
 
 [Config with_EtherMAC_internalQueue_fullduplex]
 description = ""
 **.eth[*].mac.typename = "EtherMac" #TODO autoconverted
-**.eth[*].queueType = "" 
+**.eth[*].queue.typename = ""
 
 [Config with_EtherMAC_externalQueue_halfduplex]
 description = ""
 **.eth[*].mac.typename = "EtherMac" #TODO autoconverted
 **.eth[*].mac.duplexMode = false
-**.eth[*].queueType = "DropTailQueue"
+**.eth[*].queue.typename = "DropTailQueue"
 
 [Config with_EtherMAC_internalQueue_halfduplex]
 description = ""
 **.eth[*].mac.typename = "EtherMac" #TODO autoconverted
 **.eth[*].mac.duplexMode = false
-**.eth[*].queueType = "" 
+**.eth[*].queue.typename = ""
 
 ###################################################################
 
@@ -88,7 +88,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.server*.app[0].echoDelay = 0s
 
 # NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 #*.configurator.networkAddress = "10.0.0.0"
