--- a/examples/ipv6/ipv6bulk/omnetpp.ini
+++ b/examples/ipv6/ipv6bulk/omnetpp.ini
@@ -80,10 +80,10 @@ sim-time-limit = 50day
 **.server.app[0].echoDelay = 0s
 
 # NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
-**.eth[*].queueType = "DropTailQueue" # in routers 
+**.eth[*].queue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 **.eth[*].mac.txrate = 10Mbps
 **.eth[*].mac.duplexMode = true
