--- a/examples/sctp/cmttest/omnetpp.ini
+++ b/examples/sctp/cmttest/omnetpp.ini
@@ -101,7 +101,7 @@ network = multihomed
 
 
 # NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 100  # in routers
 **.ppp[*].ppp.mtu = 1500 B
 
