--- a/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
@@ -70,10 +70,10 @@ cmdenv-express-mode = true
 **.eth[*].mac.writeScalars = false
 
 # Queues
-**.ppp[*].queueType = "DropTailQueue"
+**.ppp[*].queue.typename = "DropTailQueue"
 **.ppp[*].queue.frameCapacity = 10
 
-**.eth[*].queueType = "DropTailQueue" # in routers 
+**.eth[*].queue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 
 # nam trace
