--- a/examples/bgpv4/BgpCompleteTest/omnetpp.ini
+++ b/examples/bgpv4/BgpCompleteTest/omnetpp.ini
@@ -18,7 +18,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.rsvp.procDelay = 1us
 
 # NIC configuration
-**.queueType = "DropTailQueue"
+**.queue.typename = "DropTailQueue"
 **.queue.frameCapacity = 100
 
 #tcp settings
