--- a/examples/diffserv/onedomain/omnetpp.ini
+++ b/examples/diffserv/onedomain/omnetpp.ini
@@ -8,7 +8,7 @@ sim-time-limit = 1250s
 debug-statistics-recording = true
 
 # default queues
-**.queueType = "DropTailQueue"
+**.queue.typename = "DropTailQueue"
 **.queue.frameCapacity = 100
 **.queue.dataQueue.frameCapacity = 100
 
@@ -70,7 +70,7 @@ debug-statistics-recording = true
 **.ingressTC.classifier.filters = xmldoc("filters.xml", "//experiment[@id='default']")
 **.ingressTC.marker.dscps = "AF11 AF21 AF31 AF41 BE"
 
-**.R?.ppp[*].queueType = "DSQueue1" 
+**.R?.ppp[*].queue.typename = "DSQueue1"
 **.R?.ppp[*].queue.frameCapacity = 100
 
 # statistics
@@ -115,7 +115,7 @@ extends = Apps, Exp1
 [Config Exp17]
 extends = Apps, Exp1
 
-**.queueType = "DropTailQueue"
+**.queue.typename = "DropTailQueue"
 **.queue.frameCapacity = 400
 
 #
@@ -142,7 +142,7 @@ extends = Apps, Exp1
 **.ingressTC.numClasses = 4
 **.ingressTC.classifier.filters = xmldoc("filters.xml", "//experiment[@id='default']")
 
-**.R?.ppp[*].queueType = "DSQueue2" 
+**.R?.ppp[*].queue.typename = "DSQueue2" 
 **.R?.**.beQueue.frameCapacity = 100
 **.R?.**.red.minths = "60 30 10"
 **.R?.**.red.maxths = "100 70 40"
@@ -171,8 +171,8 @@ extends = Exp2, Apps
 
 [Config Exp24]
 extends = Exp2, Apps
-**.R?.eth[*].ingressTC.typename = "" #TODO autoconverted
-**.R?.ppp[*].queueType = "DropTailQueue"
+**.R?.eth[*].ingressTC.typename = ""#TODO autoconverted
+**.R?.ppp[*].queue.typename = "DropTailQueue"
 **.R?.ppp[*].queue.frameCapacity = 100
 
 #
@@ -216,7 +216,7 @@ extends = Exp3, Apps
 **.ingressTC.meter.cbs = 30000B
 **.ingressTC.marker.dscps = "AF11 AF12"
 
-**.R?.ppp[*].queueType = "DSQueue2" 
+**.R?.ppp[*].queue.typename = "DSQueue2" 
 **.R?.**.beQueue.frameCapacity = 100
 **.R?.**.red.minths = "0 10 10"
 **.R?.**.red.maxths = "100 50 50"
@@ -230,12 +230,12 @@ extends = Exp3, Apps
 **.ingressTC.meter.cir = "150kbps"
 **.ingressTC.meter.cbs = 30000B
 
-**.R?.ppp[*].queueType = "DropTailQueue"
+**.R?.ppp[*].queue.typename = "DropTailQueue"
 **.R?.ppp[*].queue.frameCapacity = 200
 
 [Config Exp33]
 extends = Exp3, Apps
-**.R?.ppp[*].queueType = "DropTailQueue"
+**.R?.ppp[*].queue.typename = "DropTailQueue"
 **.R?.ppp[*].queue.frameCapacity = 200
 
 [Config Exp5]
@@ -265,13 +265,13 @@ extends = Exp5, Apps
 **.ingressTC.classifier.filters = xmldoc("filters.xml", "//experiment[@id='5.1']")
 **.ingressTC.marker.dscps = "EF AF11 AF21 BE" # BE is for Arp
 
-**.R?.ppp[*].queueType = "DSQueue1" 
+**.R?.ppp[*].queue.typename = "DSQueue1"
 **.R?.ppp[*].queue.frameCapacity = 100
 **.R?.**.wrr.weights = "4 3 0 0 1"
 
 [Config Exp52]
 extends = Exp5, Apps
 
-**.R?.ppp[*].egressTC.typename = "" #TODO autoconverted
-**.R?.ppp[*].queueType = "DropTailQueue"
+**.R?.ppp[*].egressTC.typename = ""#TODO autoconverted
+**.R?.ppp[*].queue.typename = "DropTailQueue"
 **.R?.ppp[*].queue.frameCapacity = 200
