--- a/examples/ethernet/arptest2/omnetpp.ini
+++ b/examples/ethernet/arptest2/omnetpp.ini
@@ -29,7 +29,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.server*.app[0].echoDelay = 0s
 
 # Ethernet NIC configuration
-**.eth[*].queueType = "DropTailQueue" # in routers 
+**.eth[*].queue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 
 **.eth[*].mac.duplexMode = true
