--- a/examples/inet/tcpclientserver/omnetpp.ini
+++ b/examples/inet/tcpclientserver/omnetpp.ini
@@ -191,7 +191,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.server*.app[0].echoDelay = 0s
 
 # NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 #*.configurator.networkAddress = "10.0.0.0"
