--- a/examples/ipv6/ipv6nclients/omnetpp.ini
+++ b/examples/ipv6/ipv6nclients/omnetpp.ini
@@ -81,11 +81,11 @@ tkenv-plugin-path = ../../../etc/plugins
 **.app[*].dataTransferMode = "object"
 
 # Ppp NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 # Ethernet NIC configuration
-**.eth[*].queueType = "DropTailQueue" # in routers 
+**.eth[*].queue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 
 #**.eth[*].mac.txrate = 10Mbps
