--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -157,11 +157,11 @@ tkenv-plugin-path = ../../etc/plugins
 **.ipv4.proxyARP = true  # Host's is hardwired "false"
 
 # Ppp NIC configuration
-**.ppp[*].queueType = "DropTailQueue" # in routers 
+**.ppp[*].queue.typename = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 # Ethernet NIC configuration
-**.eth[*].queueType = "DropTailQueue" # in routers 
+**.eth[*].queue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 **.eth[*].encap.*.scalar-recording = false
 **.eth[*].mac.promiscuous = false
