--- a/examples/voipstream/VoIPStreamTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTest/omnetpp.ini
@@ -113,9 +113,9 @@ cmdenv-express-mode = true
 **.eth[*].mac.writeScalars = false
 
 # Queues
-**.ppp[*].queueType = "DropTailQueue"
+**.ppp[*].queue.typename = "DropTailQueue"
 **.ppp[*].queue.frameCapacity = 10
-**.eth[*].queueType = "DropTailQueue"
+**.eth[*].queue.typename = "DropTailQueue"
 **.eth[*].queue.dataQueue.frameCapacity = 10
 
 # nam trace
