All: Replaced Ethernet queue.typename parameter assignments with 2 assignments.

--- a/examples/diffserv/onedomain/omnetpp.ini
+++ b/examples/diffserv/onedomain/omnetpp.ini
@@ -8,7 +8,8 @@ sim-time-limit = 1250s
 debug-statistics-recording = true
 
 # default queues
-**.queue.typename = "DropTailQueue"
+**.queue.typename = "EtherQosQueue"
+**.queue.dataQueue.typename = "DropTailQueue"
 **.queue.frameCapacity = 100
 **.queue.dataQueue.frameCapacity = 100
 
