--- a/examples/ethernet/arptest/omnetpp.ini
+++ b/examples/ethernet/arptest/omnetpp.ini
@@ -36,7 +36,8 @@ tkenv-plugin-path = ../../../etc/plugins
 # Queues
 **.ppp[*].queue.typename = "DropTailQueue"
 **.ppp[*].queue.frameCapacity = 10
-**.eth[*].queue.typename = "DropTailQueue"
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue"
 **.eth[*].queue.dataQueue.frameCapacity = 10
 
 # Ethernet switch
