--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -1,6 +1,7 @@
 [Config with_EtherMACFullDuplex_externalQueue]
 description = ""
-**.eth[*].queue.typename = "DropTailQueue"
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue"
 
 [Config with_EtherMACFullDuplex_internalQueue]
 description = ""
@@ -9,7 +10,8 @@ description = ""
 [Config with_EtherMAC_externalQueue_fullduplex]
 description = ""
 **.eth[*].mac.typename = "EtherMac" #TODO autoconverted
-**.eth[*].queue.typename = "DropTailQueue"
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue"
 
 
 [Config with_EtherMAC_internalQueue_fullduplex]
@@ -21,7 +23,8 @@ description = ""
 description = ""
 **.eth[*].mac.typename = "EtherMac" #TODO autoconverted
 **.eth[*].mac.duplexMode = false
-**.eth[*].queue.typename = "DropTailQueue"
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue"
 
 [Config with_EtherMAC_internalQueue_halfduplex]
 description = ""
