--- a/examples/ipv6/ipv6nclients/omnetpp.ini
+++ b/examples/ipv6/ipv6nclients/omnetpp.ini
@@ -85,7 +85,8 @@ tkenv-plugin-path = ../../../etc/plugins
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 # Ethernet NIC configuration
-**.eth[*].queue.typename = "DropTailQueue" # in routers
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 
 #**.eth[*].mac.txrate = 10Mbps
