--- a/examples/ipv6/nclients/omnetpp.ini
+++ b/examples/ipv6/nclients/omnetpp.ini
@@ -91,7 +91,8 @@ extends = TCP_APP
 network = NClientsEth
 
 # Ethernet NIC configuration
-**.eth[*].queue.typename = "DropTailQueue" # in routers
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 
 #**.eth[*].mac.txrate = 10Mbps
