--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -161,7 +161,8 @@ tkenv-plugin-path = ../../etc/plugins
 **.ppp[*].queue.frameCapacity = 10  # in routers
 
 # Ethernet NIC configuration
-**.eth[*].queue.typename = "DropTailQueue" # in routers
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].queue.dataQueue.frameCapacity = 10  # in routers
 **.eth[*].encap.*.scalar-recording = false
 **.eth[*].mac.promiscuous = false
