--- a/examples/voipstream/VoIPStreamTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTest/omnetpp.ini
@@ -115,7 +115,8 @@ cmdenv-express-mode = true
 # Queues
 **.ppp[*].queue.typename = "DropTailQueue"
 **.ppp[*].queue.frameCapacity = 10
-**.eth[*].queue.typename = "DropTailQueue"
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue"
 **.eth[*].queue.dataQueue.frameCapacity = 10
 
 # nam trace
